v0.16
    * FIX : problem when joining ways
    * CHG : hardcode "lat/long", i.e. EPSG:4326, projection
    * CHG : hardcode "google" projection.
    * CHG : adapt TMS code to allow for non-google projections
    * ADD : add the possibility to show a lat/lon grid
    * FIX : delete a way when its second to last node is deleted (fixes #2786)
    * FIX : make sure polygons are at least 1 pixel wide when drawing them at creation time
    * FIX : Do not count deleted parents when removing children nodes (fixes #2785)
    * FIX : Make sure not to write to the log after it has been closed (fixes #2783)
    * FIX : OSX Qt system translations location (by Aleksandar)
    * FIX : Update language of language combo after language change (by Alaeksandar)
    * FIX : Only allow virtual node updates after relations resolution (by Trav)(closes #2782)
    * ADD : Allow to zoom on the location of a GeoTIFF image
    * FIX : Do not updateindex() if the feature is deleted 
    * FIX : roads not always refreshed when changing type or properties (fixes #2773)
    * FIX : Cannot cleanly copy tags from one relation to another (fixes #2746)
    * FIX : When merging contiguous nodes in the same way, check that we don't add the same node twice (fixes #2771)  
    * ADD : Brazilian Portuguese translation (by Marcio Moraes)
    * FIX : OSX enhacements (by Aleksandar Topuzovic) (closes #2774)
    * FIX : When nodes are hidden,do not put them in the way of selecting roads
    * FIX : avoid multiple updateVirtuals() at download time by disabling it and doing them all when the download is done
    * FIX : speedup node moving by disabling virtual nodes and index updates during drag
    * FIX : crash when coming from "Separate move mode" and a feature is selected.
    * CHG : Move the "File-Render" menu to "File-Export-Raster/SVG"
v0.15
    * FIX : In about box, the changelog is now properly resized
    * ADD : support for OSM short link as input