@@ -1,4 +1,4 @@
-- Implement WMS-C (Tiling and caching of WMS images)
+- Adapt zoom locking code to WMS-C
 - Update the gpsd code
 - Implement in-process WMS-C proxy for "standard" WMS
 - Allow to middle-split a road by selecting only 2 single-parented nodes from it
