@@ -70,7 +70,7 @@ public:
     virtual QPixmap getPixmap(const QRectF& /* wgs84Bbox */, const QRectF& /* projBbox */, const QRect& /* size */) const { return QPixmap(); }
 
     virtual QString projection() const;
-    virtual QRectF	getBoundingbox() const { return QRectF(); }
+    virtual QRectF	getBoundingbox() const;
 
     virtual bool isTiled() const { return true; }
     virtual int getTilesWE(int zoomlevel) const;
