@@ -1,4 +1,5 @@
 v0.16
+    * ADD : support for WMS-C servers (see http://wiki.openstreetmap.org/wiki/Merkaartor/Documentation#WMS-C_Servers) (closes #2598)
     * FIX : problem when joining ways
     * CHG : hardcode "lat/long", i.e. EPSG:4326, projection
     * CHG : hardcode "google" projection.
